crates/phoenix-codegen/src/snapshots/phoenix_codegen__typescript__tests__server_minimal_endpoint.snap
---
source: crates/phoenix-codegen/src/typescript_tests.rs
expression: files.server
---
// Generated by Phoenix Gen — do not edit manually.

import { Router } from "express";
import type { Request, Response } from "express";
import type { Handlers } from "./handlers";

export function createRouter(handlers: Handlers): Router {
  const router = Router();

  router.get("/api/health", async (req: Request, res: Response) => {
    try {
      await handlers.healthCheck();
      res.status(204).end();
    } catch {
      res.status(500).json({ error: "Internal Server Error" });
    }
  });

  return router;
}
