crates/phoenix-codegen/src/snapshots/phoenix_codegen__typescript__tests__server_multiple_endpoints.snap
---
source: crates/phoenix-codegen/src/typescript.rs
expression: files.server
---
// Generated by Phoenix Gen — do not edit manually.

import { Router } from "express";
import type { Request, Response } from "express";
import type { Handlers } from "./handlers";
import type { CreateUserBody } from "./types";

export function createRouter(handlers: Handlers): Router {
  const router = Router();

  router.get("/api/users", async (req: Request, res: Response) => {
    try {
      const result = await handlers.listUsers();
      res.json(result);
    } catch {
      res.status(500).json({ error: "Internal Server Error" });
    }
  });

  router.post("/api/users", async (req: Request, res: Response) => {
    try {
      const body = req.body as CreateUserBody;
      const result = await handlers.createUser(body);
      res.json(result);
    } catch {
      res.status(500).json({ error: "Internal Server Error" });
    }
  });

  router.get(
    "/api/users/:id",
    async (req: Request<{ id: string }>, res: Response) => {
      try {
        const id = req.params.id;
        const result = await handlers.getUser(id);
        res.json(result);
      } catch {
        res.status(500).json({ error: "Internal Server Error" });
      }
    },
  );

  router.delete(
    "/api/users/:id",
    async (req: Request<{ id: string }>, res: Response) => {
      try {
        const id = req.params.id;
        await handlers.deleteUser(id);
        res.status(204).end();
      } catch {
        res.status(500).json({ error: "Internal Server Error" });
      }
    },
  );

  return router;
}
