crates/phoenix-codegen/src/snapshots/phoenix_codegen__typescript__tests__server_multiple_path_params.snap
---
source: crates/phoenix-codegen/src/typescript.rs
expression: files.server
---
// Generated by Phoenix Gen — do not edit manually.

import { Router } from "express";
import type { Request, Response } from "express";
import type { Handlers } from "./handlers";

export function createRouter(handlers: Handlers): Router {
  const router = Router();

  router.get(
    "/api/users/:userId/posts/:postId",
    async (req: Request<{ userId: string; postId: string }>, res: Response) => {
      try {
        const userId = req.params.userId;
        const postId = req.params.postId;
        const result = await handlers.getComment(userId, postId);
        res.json(result);
      } catch {
        res.status(500).json({ error: "Internal Server Error" });
      }
    },
  );

  return router;
}
