crates/phoenix-codegen/src/snapshots/phoenix_codegen__typescript__tests__server_query_and_body.snap
---
source: crates/phoenix-codegen/src/typescript_tests.rs
expression: files.server
---
// Generated by Phoenix Gen — do not edit manually.

import { Router } from "express";
import type { Request, Response } from "express";
import type { Handlers } from "./handlers";
import type { CreateUserBody } from "./types";

export function createRouter(handlers: Handlers): Router {
  const router = Router();

  router.post("/api/users", async (req: Request, res: Response) => {
    try {
      const body = req.body as CreateUserBody;
      const query = {
        notify:
          req.query.notify !== undefined ? req.query.notify === "true" : false,
      };
      const result = await handlers.createUser(body, query);
      res.json(result);
    } catch {
      res.status(500).json({ error: "Internal Server Error" });
    }
  });

  return router;
}
