crates/phoenix-codegen/src/snapshots/phoenix_codegen__typescript__tests__server_string_bool_defaults.snap
---
source: crates/phoenix-codegen/src/typescript.rs
expression: files.server
---
// Generated by Phoenix Gen — do not edit manually.

import { Router } from "express";
import type { Request, Response } from "express";
import type { Handlers } from "./handlers";

export function createRouter(handlers: Handlers): Router {
  const router = Router();

  router.get("/api/items", async (req: Request, res: Response) => {
    try {
      const query = {
        sort: req.query.sort !== undefined ? req.query.sort as string : "name",
        ascending:
          req.query.ascending !== undefined
            ? req.query.ascending === "true"
            : true,
        limit: req.query.limit !== undefined ? Number(req.query.limit) : 50,
      };
      const result = await handlers.listItems(query);
      res.json(result);
    } catch {
      res.status(500).json({ error: "Internal Server Error" });
    }
  });

  return router;
}
