crates/phoenix-codegen/src/snapshots/phoenix_codegen__typescript__tests__server_with_validation.snap
---
source: crates/phoenix-codegen/src/typescript.rs
expression: files.server
---
// Generated by Phoenix Gen — do not edit manually.

import { Router } from "express";
import type { Request, Response } from "express";
import type { Handlers } from "./handlers";
import { ValidationError, validateCreateUserBody } from "./types";

export function createRouter(handlers: Handlers): Router {
  const router = Router();

  router.post("/api/users", async (req: Request, res: Response) => {
    try {
      const body = validateCreateUserBody(req.body);
      const result = await handlers.createUser(body);
      res.json(result);
    } catch (error: unknown) {
      if (error instanceof ValidationError) {
        res.status(400).json({ error: error.message });
        return;
      }
      res.status(500).json({ error: "Internal Server Error" });
    }
  });

  return router;
}
