crates/phoenix-codegen/src/snapshots/phoenix_codegen__typescript__tests__simple_enum_to_union_types.snap
---
source: crates/phoenix-codegen/src/typescript_tests.rs
expression: files.types
---
// Generated by Phoenix Gen — do not edit manually.

/** User roles */
export type Role = "Admin" | "Editor" | "Viewer";
