crates/phoenix-codegen/src/snapshots/phoenix_codegen__typescript__tests__single_error_client.snap
---
source: crates/phoenix-codegen/src/typescript_tests.rs
expression: files.client
---
// Generated by Phoenix Gen — do not edit manually.

import type { User } from "./types";

export class ApiError extends Error {
  constructor(
    public readonly code: string,
    public readonly status: number,
    public readonly body: string,
  ) {
    super(`${code} (${String(status)}): ${body}`);
    this.name = "ApiError";
  }
}

export let baseUrl = "";

export function setBaseUrl(url: string): void {
  baseUrl = url;
}

export const api = {
  async getUser(id: string): Promise<User> {
    const response = await fetch(`${baseUrl}/api/users/${id}`, {
      method: "GET",
    });
    if (!response.ok) {
      const errorBody = await response.text();
      if (response.status === 404)
        throw new ApiError("NotFound", 404, errorBody);
      throw new ApiError("Unknown", response.status, errorBody);
    }
    return (await response.json()) as User;
  },
};
