crates/phoenix-codegen/src/snapshots/phoenix_codegen__typescript__tests__struct_optional_fields_types.snap
---
source: crates/phoenix-codegen/src/typescript_tests.rs
expression: files.types
---
// Generated by Phoenix Gen — do not edit manually.

export interface Profile {
  id: number;
  name: string;
  bio?: string | undefined;
  age?: number | undefined;
}
